fdo#35320 A fix for Arabic justification problem caused by kashidas

Change-Id: I512e6332a632acf90e4f995fbc7fd19e7ef094ec
Reviewed-on: https://gerrit.libreoffice.org/3644
Tested-by: Ahmad Harthi <aalharthi@kacst.edu.sa>
Reviewed-by: Ahmad Harthi <aalharthi@kacst.edu.sa>